small bug fixed and added some style to the essay scrollbar

--- a/english/static/english/assets/css/coming-sssoon.css
+++ b/english/static/english/assets/css/coming-sssoon.css
@@ -951,6 +951,27 @@ body {
   padding-bottom: 40px;
   background-color: white;
   box-shadow: 0px 0px 5px 0px #888;
+  overflow-y: scroll;
+}
+
+#paper::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+#paper::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+#paper::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #aaaaff;
 }
 
 /* styling red vertical line */
@@ -961,13 +982,11 @@ body {
   position: absolute;
   top: 0;
   left: 40px;
-  background-color: rgba(255,0,0,0.6);
 }
 
 /* styling blue horizontal lines */
 #pattern {
-  height: 100%;
-  background-image: repeating-linear-gradient(white 0px, white 24px, teal 25px);
+    height:100%;
 }
 
 /* styling text content */
@@ -979,9 +998,8 @@ body {
   font-size: 19px;
   letter-spacing: 1px;
   word-spacing: 5px;
-}
-
 .payment-choices-box {
+    background-color:rgba(150,150,150,0.6);
     border-radius:10px;
     padding-top:1px;
     padding-bottom:1px;"
